# tj

./: .gitignore  .versionignore  0.4.47_代码审查报告.md  0.4.47_优化路线图.md  DEVELOPMENT_LOG.md  README.md  build_installer.iss  generate_stats_page.js  overview.md  update_sql.py  update_sql_v2.py  v0.2.17_FixPlan.md  v0.4.52_代码审查报告.md  v0.4.59_附件上传问题根因分析.md  v0.4.60_修复方案.md  v0.4.61_修复方案.md  v0.4.62_一次性修复方案.md  v0.4.62_附件上传根因实测报告.md  v0.4.63_增量方案.md  v0.4.64_修正方案.md  v0.4.64_修正方案2.md  version-copy.ps1  version-pack.ps1  工作量统计工具_项目分析.md  开发历程总结.md  版本对比分析报告.md  用户使用说明书.md
.codebuddy/memory/: 2026-06-22.md  2026-06-23.md  2026-06-24.md  2026-06-26.md  2026-06-27.md  2026-06-29.md  2026-06-30.md  ALL_MEMORY_EXPORT.md  MEMORY.md
.github/workflows/: docker-publish.yml
.workbuddy/memory/: 2026-06-19.md  2026-06-21.md  2026-06-22.md  2026-06-24.md  2026-06-30.md  2026-07-01.md  2026-07-02.md  2026-07-03.md  2026-07-04.md  2026-07-05.md  2026-07-06.md  2026-07-07.md  2026-07-08.md  2026-07-09.md  (+7 more)
docs/: Rust重构方案.md  UI设计系统.md  class-diagram.mermaid  iLab功能梳理报告.md  sequence-diagram.mermaid  system_design.md  v0.3.7-导出模板预览-实现方案.md  实验室送样模块-层级设计方案.md  导出模板实现方案.md  本地化LIMS_PRD.md  本地化LIMS_架构设计.md  本地化LIMS_部署说明.md
memory/: 2026-06-26.md  MEMORY.md
test-export/: config.toml
workload-tool/: build_installer.iss
workload-tool-rust/: Cargo.toml  Excel导出错误修复方案.md  IMPORT_EXCEL_PLAN.md  build_installer.iss  v0.3.5项目分析报告.md
workload-tool/src-tauri/: Cargo.toml  tauri.conf.json
workload-tool/src-tauri/capabilities/: default.json
workload-tool/src-tauri/src/: lib.rs  main.rs
(+1353 files in other folders)
