[package]
name = "workload-tool"
version = "1.0.0"
edition = "2021"
description = "工作量统计工具 - Rust/Tauri 版本"

[dependencies]
tauri = { version = "2", features = ["default"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
calamine = "0.26"
rust_xlsxwriter = "0.82"
chrono = "0.4"
regex = "1"
log = "0.4"
env_logger = "0.11"
dirs = "6"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "workload_tool_lib"
crate-type = ["lib", "cdylib", "staticlib"]
